Limit the input

--- a/index.html
+++ b/index.html
@@ -43,81 +43,81 @@
         <div class="my-4 flex flex-col items-center gap-1">
             <div class="flex gap-1">
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.q.window="word.push('q')"
+                     @keydown.q.window="word.length < 5 ? word.push('q') : ''"
                      x-text="'q'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.w.window="word.push('w')"
+                     @keydown.w.window="word.length < 5 ? word.push('w'): ''"
                      x-text="'w'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.e.window="word.push('e')"
+                     @keydown.e.window="word.length < 5 ? word.push('e') : ''"
                      x-text="'e'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.r.window="word.push('r')"
+                     @keydown.r.window="word.length < 5 ? word.push('r') : ''"
                      x-text="'r'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.t.window="word.push('t')"
+                     @keydown.t.window="word.length < 5 ? word.push('t') : ''"
                      x-text="'t'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.y.window="word.push('y')"
+                     @keydown.y.window="word.length < 5 ? word.push('y') : ''"
                      x-text="'y'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.u.window="word.push('u')"
+                     @keydown.u.window="word.length < 5 ? word.push('u') : ''"
                      x-text="'u'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.i.window="word.push('i')"
+                     @keydown.i.window="word.length < 5 ? word.push('i') : ''"
                      x-text="'i'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.o.window="word.push('o')"
+                     @keydown.o.window="word.length < 5 ? word.push('o') : ''"
                      x-text="'o'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.p.window="word.push('p')"
+                     @keydown.p.window="word.length < 5 ? word.push('p') : ''"
                      x-text="'p'">
                 </div>
             </div>
             <div class="flex gap-1">
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.a.window="word.push('a')"
+                     @keydown.a.window="word.length < 5 ? word.push('a') : ''"
                      x-text="'a'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.s.window="word.push('s')"
+                     @keydown.s.window="word.length < 5 ? word.push('s') : ''"
                      x-text="'s'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.d.window="word.push('d')"
+                     @keydown.d.window="word.length < 5 ? word.push('d') : ''"
                      x-text="'d'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.f.window="word.push('f')"
+                     @keydown.f.window="word.length < 5 ? word.push('f') : ''"
                      x-text="'f'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.g.window="word.push('g')"
+                     @keydown.g.window="word.length < 5 ? word.push('g') : ''"
                      x-text="'g'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.h.window="word.push('h')"
+                     @keydown.h.window="word.length < 5 ? word.push('h') : ''"
                      x-text="'h'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.j.window="word.push('j')"
+                     @keydown.j.window="word.length < 5 ? word.push('j') : ''"
                      x-text="'j'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.k.window="word.push('k')"
+                     @keydown.k.window="word.length < 5 ? word.push('k') : ''"
                      x-text="'k'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.l.window="word.push('l')"
+                     @keydown.l.window="word.length < 5 ? word.push('l') : ''"
                      x-text="'l'">
                 </div>
             </div>
@@ -126,31 +126,31 @@
                      @keydown.enter.window="submitWord()" x-text="'enter'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.z.window="word.push('z')"
+                     @keydown.z.window="word.length < 5 ? word.push('z') : ''"
                      x-text="'z'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.x.window="word.push('x')"
+                     @keydown.x.window="word.length < 5 ? word.push('x') : ''"
                      x-text="'x'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.c.window="word.push('c')"
+                     @keydown.c.window="word.length < 5 ? word.push('c') : ''"
                      x-text="'c'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.v.window="word.push('v')"
+                     @keydown.v.window="word.length < 5 ? word.push('v') : ''"
                      x-text="'v'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.b.window="word.push('b')"
+                     @keydown.b.window="word.length < 5 ? word.push('b') : ''"
                      x-text="'b'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.n.window="word.push('n')"
+                     @keydown.n.window="word.length < 5 ? word.push('n') : ''"
                      x-text="'n'">
                 </div>
                 <div class="text-white text-xl font-semibold bg-zinc-500 w-12 h-16 rounded-md uppercase flex justify-center items-center"
-                     @keydown.m.window="word.push('m')"
+                     @keydown.m.window="word.length < 5 ? word.push('m') : ''"
                      x-text="'m'">
                 </div>
                 <div class="text-white text-sm font-semibold bg-zinc-500 w-20 h-16 rounded-md uppercase flex justify-center items-center"
