Add delete option

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                      x-text="'m'">
                 </div>
                 <div class="text-white text-sm font-semibold bg-zinc-500 w-20 h-16 rounded-md uppercase flex justify-center items-center"
+                     x-on:click="word.pop()"
                      x-text="'del'">
                 </div>
             </div>
