Update end game messages

--- a/index.html
+++ b/index.html
@@ -157,13 +157,17 @@
         <div class="absolute w-full h-screen bg-gray-700/80 top-0 z-50">
             <div class="flex justify-center items-center h-8/12">
                 <div class="bg-gray-200 opacity-full w-[40rem] h-96">
-                    <div class="flex justify-center items-center h-full flex-col gap-4" x-show="checker">
-                        <div class="bg-green-500 text-white p-4 my-4 rounded-md" x-text="'You guessed the word'"></div>
-                        <button class="bg-red-500 p-4 text-white rounded-md" x-on:click="window.location.reload()">Play again</button>
+                    <div class="flex justify-around items-center h-full flex-col gap-4" x-show="checker">
+                        <div>
+                            <span class="text-2xl font-semibold">Congratulations you have guessed the word!</span>
+                        </div>
+                        <button class="bg-green-500 py-4 px-8 text-white font-bold rounded-full" x-on:click="window.location.reload()">Play again</button>
                     </div>
-                    <div class="flex justify-center items-center h-full flex-col gap-4" x-show="outOfTries">
-                        <div class="bg-red-500 text-white p-4 my-4 rounded-md" x-text="'You ran out of tries'"></div>
-                        <button class="bg-red-500 p-4 text-white rounded-md" x-on:click="window.location.reload()">Play again</button>
+                    <div class="flex justify-around items-center h-full flex-col gap-4" x-show="outOfTries">
+                        <div>
+                            <span class="text-2xl font-semibold">You ran out of tries!</span>
+                        </div>
+                        <button class="bg-green-500 py-4 px-8 text-white font-bold rounded-full" x-on:click="window.location.reload()">Play again</button>
                     </div>
                 </div>
             </div>
